--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
 <p>Kody changed my original font's, not cool man.</p>
 
 <p>I like the new font - Phil</p>
+
+<p>Hello World!</p>
 <router-outlet></router-outlet>
